Model/OCL/Compiler/OCLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.3.1.7705
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.3.1.7705 ..\\..\\Model\\OCL\\Grammar\\OCL.g3 2012-02-26 22:10:01

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using Exolutio.Model.OCL.AST;
using Exolutio.Model.OCL.Types;


using System.Collections.Generic;
using Antlr.Runtime;

namespace Exolutio.Model.OCL.Compiler
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3.1.7705")]
[System.CLSCompliant(false)]
public partial class OCLParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BooleanLiteralExp", "Char", "EscapeSequence", "ExponentPart", "Hex", "IntegerLiteralExp", "InvalidLiteralExp", "LINE_COMMENT", "NESTED_ML_COMMENT", "NameChar", "NameStartChar", "NullLiteralExp", "Num", "RealLiteralExp", "SimpleName", "StringChar", "StringLiteralExp", "UnlimitedNaturalLiteralExp", "WS", "WhiteSpaceChar", "'('", "')'", "'+'", "','", "'-'", "'->'", "'.'", "'..'", "'/'", "':'", "'::'", "';'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'?'", "'@'", "'Bag'", "'Boolean'", "'Collection'", "'Integer'", "'OclAny'", "'OclInvalid'", "'OclMessage'", "'OclVoid'", "'OrderedSet'", "'Real'", "'Sequence'", "'Set'", "'String'", "'Tuple'", "'UnlimitedNatural'", "'['", "']'", "'^'", "'^^'", "'and'", "'body'", "'context'", "'derivate'", "'else'", "'endif'", "'if'", "'implies'", "'in'", "'init'", "'inv'", "'iterate'", "'let'", "'not'", "'or'", "'post'", "'pre'", "'then'", "'xor'", "'{'", "'|'", "'}'"
	};
	public const int EOF=-1;
	public const int BooleanLiteralExp=4;
	public const int Char=5;
	public const int EscapeSequence=6;
	public const int ExponentPart=7;
	public const int Hex=8;
	public const int IntegerLiteralExp=9;
	public const int InvalidLiteralExp=10;
	public const int LINE_COMMENT=11;
	public const int NESTED_ML_COMMENT=12;
	public const int NameChar=13;
	public const int NameStartChar=14;
	public const int NullLiteralExp=15;
	public const int Num=16;
	public const int RealLiteralExp=17;
	public const int SimpleName=18;
	public const int StringChar=19;
	public const int StringLiteralExp=20;
	public const int UnlimitedNaturalLiteralExp=21;
	public const int WS=22;
	public const int WhiteSpaceChar=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int T__70=70;
	public const int T__71=71;
	public const int T__72=72;
	public const int T__73=73;
	public const int T__74=74;
	public const int T__75=75;
	public const int T__76=76;
	public const int T__77=77;
	public const int T__78=78;
	public const int T__79=79;
	public const int T__80=80;
	public const int T__81=81;
	public const int T__82=82;
	public const int T__83=83;
	public const int T__84=84;

	// delegates
	// delegators

	public OCLParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public OCLParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{

		OnCreated();
	}
		

	public override string[] TokenNames { get { return OCLParser.tokenNames; } }
	public override string GrammarFileName { get { return "..\\..\\Model\\OCL\\Grammar\\OCL.g3"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules

	partial void EnterRule_contextDeclarationList();
	partial void LeaveRule_contextDeclarationList();

	// $ANTLR start "contextDeclarationList"
	// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:17:1: public contextDeclarationList : ( contextDeclaration )* ;
	[GrammarRule("contextDeclarationList")]
	public void contextDeclarationList()
	{
		EnterRule_contextDeclarationList();
		EnterRule("contextDeclarationList", 1);
		TraceIn("contextDeclarationList", 1);
		try { DebugEnterRule(GrammarFileName, "contextDeclarationList");
		DebugLocation(17, 1);
		try
		{
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:18:2: ( ( contextDeclaration )* )
			DebugEnterAlt(1);
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:18:3: ( contextDeclaration )*
			{
			DebugLocation(18, 3);
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:18:3: ( contextDeclaration )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==65))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:18:3: contextDeclaration
					{
					DebugLocation(18, 3);
					PushFollow(Follow._contextDeclaration_in_contextDeclarationList59);
					contextDeclaration();
					PopFollow();


					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("contextDeclarationList", 1);
			LeaveRule("contextDeclarationList", 1);
			LeaveRule_contextDeclarationList();
		}
		DebugLocation(19, 1);
		} finally { DebugExitRule(GrammarFileName, "contextDeclarationList"); }
		return;

	}
	// $ANTLR end "contextDeclarationList"


	partial void EnterRule_contextDeclaration();
	partial void LeaveRule_contextDeclaration();

	// $ANTLR start "contextDeclaration"
	// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:22:1: public contextDeclaration returns [ClassifierConstraint Decl] : ( propertyContextDecl | classifierContextDecl | operationContextDecl );
	[GrammarRule("contextDeclaration")]
	public ClassifierConstraint contextDeclaration()
	{
		EnterRule_contextDeclaration();
		EnterRule("contextDeclaration", 2);
		TraceIn("contextDeclaration", 2);
		ClassifierConstraint Decl = default(ClassifierConstraint);

		ClassifierConstraint classifierContextDecl1 = default(ClassifierConstraint);

		try { DebugEnterRule(GrammarFileName, "contextDeclaration");
		DebugLocation(22, 1);
		try
		{
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:24:2: ( propertyContextDecl | classifierContextDecl | operationContextDecl )
			int alt2=3;
			try { DebugEnterDecision(2, false);
			try
			{
				alt2 = dfa2.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:24:3: propertyContextDecl
				{
				DebugLocation(24, 3);
				PushFollow(Follow._propertyContextDecl_in_contextDeclaration78);
				propertyContextDecl();
				PopFollow();


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:25:3: classifierContextDecl
				{
				DebugLocation(25, 3);
				PushFollow(Follow._classifierContextDecl_in_contextDeclaration82);
				classifierContextDecl1=classifierContextDecl();
				PopFollow();

				DebugLocation(25, 25);
				Decl =classifierContextDecl1;

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:26:3: operationContextDecl
				{
				DebugLocation(26, 3);
				PushFollow(Follow._operationContextDecl_in_contextDeclaration88);
				operationContextDecl();
				PopFollow();


				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("contextDeclaration", 2);
			LeaveRule("contextDeclaration", 2);
			LeaveRule_contextDeclaration();
		}
		DebugLocation(27, 1);
		} finally { DebugExitRule(GrammarFileName, "contextDeclaration"); }
		return Decl;

	}
	// $ANTLR end "contextDeclaration"


	partial void EnterRule_propertyContextDecl();
	partial void LeaveRule_propertyContextDecl();

	// $ANTLR start "propertyContextDecl"
	// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:29:1: propertyContextDecl : propertyContextHead ( initOrDerValue )* ;
	[GrammarRule("propertyContextDecl")]
	private void propertyContextDecl()
	{
		EnterRule_propertyContextDecl();
		EnterRule("propertyContextDecl", 3);
		TraceIn("propertyContextDecl", 3);
		try { DebugEnterRule(GrammarFileName, "propertyContextDecl");
		DebugLocation(29, 1);
		try
		{
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:30:2: ( propertyContextHead ( initOrDerValue )* )
			DebugEnterAlt(1);
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:30:3: propertyContextHead ( initOrDerValue )*
			{
			DebugLocation(30, 3);
			PushFollow(Follow._propertyContextHead_in_propertyContextDecl98);
			propertyContextHead();
			PopFollow();

			DebugLocation(30, 23);
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:30:23: ( initOrDerValue )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==66||LA3_0==72))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:30:23: initOrDerValue
					{
					DebugLocation(30, 23);
					PushFollow(Follow._initOrDerValue_in_propertyContextDecl100);
					initOrDerValue();
					PopFollow();


					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("propertyContextDecl", 3);
			LeaveRule("propertyContextDecl", 3);
			LeaveRule_propertyContextDecl();
		}
		DebugLocation(31, 1);
		} finally { DebugExitRule(GrammarFileName, "propertyContextDecl"); }
		return;

	}
	// $ANTLR end "propertyContextDecl"


	partial void EnterRule_propertyContextHead();
	partial void LeaveRule_propertyContextHead();

	// $ANTLR start "propertyContextHead"
	// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:33:1: propertyContextHead : 'context' SimpleName '::' pathName ':' type ;
	[GrammarRule("propertyContextHead")]
	private void propertyContextHead()
	{
		EnterRule_propertyContextHead();
		EnterRule("propertyContextHead", 4);
		TraceIn("propertyContextHead", 4);
		try { DebugEnterRule(GrammarFileName, "propertyContextHead");
		DebugLocation(33, 1);
		try
		{
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:34:2: ( 'context' SimpleName '::' pathName ':' type )
			DebugEnterAlt(1);
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:34:3: 'context' SimpleName '::' pathName ':' type
			{
			DebugLocation(34, 3);
			Match(input,65,Follow._65_in_propertyContextHead111); 
			DebugLocation(34, 13);
			Match(input,SimpleName,Follow._SimpleName_in_propertyContextHead113); 
			DebugLocation(34, 24);
			Match(input,34,Follow._34_in_propertyContextHead115); 
			DebugLocation(34, 29);
			PushFollow(Follow._pathName_in_propertyContextHead117);
			pathName();
			PopFollow();

			DebugLocation(34, 38);
			Match(input,33,Follow._33_in_propertyContextHead119); 
			DebugLocation(34, 42);
			PushFollow(Follow._type_in_propertyContextHead121);
			type();
			PopFollow();


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("propertyContextHead", 4);
			LeaveRule("propertyContextHead", 4);
			LeaveRule_propertyContextHead();
		}
		DebugLocation(35, 1);
		} finally { DebugExitRule(GrammarFileName, "propertyContextHead"); }
		return;

	}
	// $ANTLR end "propertyContextHead"


	partial void EnterRule_operationContextDecl();
	partial void LeaveRule_operationContextDecl();

	// $ANTLR start "operationContextDecl"
	// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:37:1: operationContextDecl : operationContextHead ( prePostOrBodyDecl )* ;
	[GrammarRule("operationContextDecl")]
	private void operationContextDecl()
	{
		EnterRule_operationContextDecl();
		EnterRule("operationContextDecl", 5);
		TraceIn("operationContextDecl", 5);
		try { DebugEnterRule(GrammarFileName, "operationContextDecl");
		DebugLocation(37, 1);
		try
		{
			// ..\\..\\Model\\OCL\\Grammar\\OCL.g3:38:2: ( operationContextHead ( prePostOrBodyDecl )* )
			DebugEnterAlt(1);
